--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "VintageOptControl"
+name = "TwoStageOptimalControl"
 uuid = "baaf2c55-359b-4809-9af1-56c4b57e479e"
 authors = ["Michael Freiberger"]
 version = "0.1.0"
@@ -10,6 +10,7 @@ Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -21,8 +22,8 @@ Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 julia = "1"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test","SafeTestsets"]
+test = ["Test", "SafeTestsets"]
