--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 
 [compat]
+JLD2 = "0.4"
 julia = "1"
 
 [extras]
