--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 
 [compat]
+Interpolations = "0.14"
 julia = "1"
 
 [extras]
