--- a/Project.toml
+++ b/Project.toml
@@ -8,7 +8,6 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
@@ -22,6 +21,16 @@ Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 
 [compat]
 julia = "1"
+BenchmarkTools = "1.3.2"
+ColorSchemes = "3.20.0"
+Coverage = "1.6.0"
+Dierckx = "0.5.2"
+FileIO = "1.16.0"
+ForwardDiff = "0.10.34"
+Interpolations = "0.14.7"
+JLD2 = "0.4.29"
+LaTeXStrings = "1.3.0"
+Plots = "1.38.2"
 
 [extras]
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
