--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 BenchmarkTools = "1.3.2"
@@ -32,6 +33,7 @@ Interpolations = "0.14.7"
 JLD2 = "0.4.29"
 LaTeXStrings = "1.3.0"
 Plots = "1.38.2"
+StaticArrays = "1.9.14"
 julia = "1.6"
 
 [extras]
