--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,11 @@ ForwardDiff = "0.10.34"
 Interpolations = "0.14.7"
 JLD2 = "0.4.29"
 LaTeXStrings = "1.3.0"
+LinearAlgebra = "1.11.0"
 Plots = "1.38.2"
+Printf = "1.11.0"
+Profile = "1.11.0"
+Serialization = "1.11.0"
 StaticArrays = "1.9.14"
 julia = "1.6"
 
