--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
 Serialization = "9e88b42a-f829-5b0c-bbe9-9e923198166b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
 BenchmarkTools = "1.3.2"
