Remove unneccesary package dependencies and allow CI failure for Julia nightly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
         version:
           - '1.11'
           - 'nightly'
+        allow_failures:
+         - julia_version: nightly
         os:
           - ubuntu-latest
         arch:
