--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+PackageCompatUI = "65465c31-362d-417a-a2f0-7fa38ae507b9"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Profile = "9abbd945-dff8-562f-b5e8-e1ebf5ef1b79"
@@ -28,18 +29,21 @@ BenchmarkTools = "1.3.2"
 ColorSchemes = "3.20.0"
 Coverage = "1.6.0"
 Dierckx = "0.5.2"
+Documenter = "1.14.1"
 FileIO = "1.16.0"
 ForwardDiff = "0.10.34"
 Interpolations = "0.14.7"
 JLD2 = "0.4.29"
 LaTeXStrings = "1.3.0"
 LinearAlgebra = "1.11.0"
+PackageCompatUI = "1.0.4"
 Plots = "1.38.2"
 Printf = "1.11.0"
 Profile = "1.11.0"
+SafeTestsets = "0.1"
 Serialization = "1.11.0"
 StaticArrays = "1.9.14"
-julia = "1.11"
+julia = "1"
 
 [extras]
 SafeTestsets = "1bc83da4-3b8d-516f-aca4-4fe02f6d838f"
