--- a/Project.toml
+++ b/Project.toml
@@ -35,7 +35,7 @@ Documenter = "1"
 FileIO = "1.16"
 ForwardDiff = "0.10.34, 1"
 Interpolations = "0.14.7, 0.16"
-JLD2 = "0.4.29, 0.5.15"
+JLD2 = "0.4.29, 0.5.15, 0.6"
 LaTeXStrings = "1.3.0"
 LinearAlgebra = "1.11.0"
 PackageCompatUI = "1.0.4"
