--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -20,5 +20,5 @@ jobs:
       
       - name: CompatHelper.main()
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.COMPATHELPER_TOKEN }}
         run: julia -e 'using CompatHelper; CompatHelper.main()'
